--- a/pokedex/pokedex-web/pom.xml
+++ b/pokedex/pokedex-web/pom.xml
@@ -127,11 +127,8 @@
 			<artifactId>font-awesome</artifactId>
 			<version>5.15.2</version>
 		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>angularjs</artifactId>
-			<version>1.3.10</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.webjars</groupId> <artifactId>angularjs</artifactId> 
+			<version>1.3.10</version> </dependency> -->
 
 	</dependencies>
 
@@ -143,6 +140,60 @@
 
 		<plugins>
 			<!--Build configuration for the WAR plugin: -->
+			<!--<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>1.8.0</version>
+				<executions>
+					<execution>
+						<id>install node and npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+					</execution>
+					<execution>
+						<id>npm install</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm test</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<environmentVariables>
+								<CI>false</CI>
+							</environmentVariables>
+							<arguments>test</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm build</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<environmentVariables>
+								<CI>false</CI>
+							</environmentVariables>
+							<arguments>run build</arguments>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<workingDirectory>src/main/frontend</workingDirectory>
+					<nodeVersion>v12.13.1</nodeVersion>
+				</configuration>
+			</plugin>-->
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>${version.war.plugin}</version>
