--- a/pokedex/pokedex-web/src/ngfrontend/package.json
+++ b/pokedex/pokedex-web/src/ngfrontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-favicon": "^1.0.4",
     "bootstrap": "^4.6.0",
     "g": "^2.0.1",
     "gulp": "^4.0.2",
