--- a/pokedex/pokedex-web/src/ngfrontend/angular.json
+++ b/pokedex/pokedex-web/src/ngfrontend/angular.json
@@ -35,9 +35,9 @@
               "src/fonts/pokemon-font-master/dist/css/pokemon-iconfont.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.js",         
-              "node_modules/startbootstrap-sb-admin-2/js/sb-admin-2.js",       
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",  
+              "node_modules/jquery/dist/jquery.js",     
+              "node_modules/startbootstrap-sb-admin-2/js/sb-admin-2.js",                     
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",  
               "node_modules/jquery.easing/jquery.easing.min.js"
             ]
           },
